...
  }

  val progressionPercentage = // in case of error set it to 0, otherwise score/currentGoal
      (if (currentUser == null || currentProgression.currentGoal == 0) 0f
      else currentUser?.score?.div(currentProgression.currentGoal.toFloat())) ?: 0f

  val scoreTextUnderCircularProgressBar = buildAnnotatedString {
    append("${currentUser?.score}")

    withStyle(style = SpanStyle(fontWeight = FontWeight.SemiBold)) {
      append("/${currentProgression.currentGoal}")
    }
  }

  Box(modifier = Modifier.padding(paddingValues).testTag("progressionScreen")) {
    LazyColumn(
        modifier = Modifier.fillMaxSize().padding(ProgressionScreenSettings.columnPadding),
        horizontalAlignment = Alignment.CenterHorizontally) {
          item {
            // Title Text Above the Progress Bar
            Text(
...
            AchievementItem(achievementEnum.achievement, false)
            HorizontalDivider(thickness = 0.5.dp, color = Color.LightGray)
          }
        } else {

          val achievementEnum = enumValueOf<MedalsAchievement>(achievementName)
          Box(modifier = Modifier.testTag("achievementItem")) {
            AchievementItem(achievementEnum.achievement, false)
            HorizontalDivider(thickness = 0.5.dp, color = Color.LightGray)
          }
        }
      }
    }
...
              style = Stroke(width = strokeWidth.toPx(), cap = StrokeCap.Round))
        }

        // Percentage Text
        Text(
            text = "${(progress * 100).toInt()}%",
            modifier = Modifier.testTag("percentageInsideCircularProgressBar"),
            fontSize = 26.sp,
            fontWeight = FontWeight.Bold,
            color = ColorPalette.PRIMARY_TEXT_COLOR)
      }
}

...
            icon = { Text(context.getString(R.string.ProgressionTrainingIconText)) },
            selected = state == DashboardStateProgression.Training,
            onClick = { uiState.value = DashboardStateProgression.Training },
            colors = ColorPalette.NAVIGATION_BAR_ITEM_COLORS)

        NavigationBarItem(
            modifier = Modifier.testTag("AchievementTab"),
            icon = { Text(context.getString(R.string.ProgressionAchievementIconText)) },
            selected = state == DashboardStateProgression.Achievement,
            onClick = { uiState.value = DashboardStateProgression.Achievement },
            colors = ColorPalette.NAVIGATION_BAR_ITEM_COLORS)
      }
}
...
