...

          showRequestDialog = false
        },
        onRefuse = { showRequestDialog = false })
  }

  Box(modifier = Modifier.testTag("addFriendScreen")) {
    Column(
        modifier =
            Modifier.fillMaxSize()
                .padding(innerPaddingValues)
                .padding(vertical = 24.dp)
                .testTag("AddFriendColumn"),
...
